      gpodder.net when the login is successfull.
    * Improved the playlist synchronisation feature.
    * Make possible to get count tracks before the XSPF file is fully loaded.
    * Mark unplayble tracks in the playlist. Patch by Sandeep Raghuraman. (BR 263640)
    * Current track applet: show number of artists instead of genres. (BR 261077)


  BUGFIXES:
    * Prevent several potential and one real media device crash. (BR 284838)
    * Fixed iPod album covers not displayed in collection browser. (BR 263268)
    * Do not crash when iPod is removed but some iPod tracks are still in
      playlist. (BR 245852)
    * Fixed several potential AmarokUrl related crashes.
    * Rework iPod identification so that it is more reliable (BR 263288)
    * iPhone 3G (and perhaps later models) should be correctly recognized by
      Amarok now. (BR 281738)
    * Automated Playlist Generator doesn't freeze anymore when it finishes.
      (BR 277865)
    * Use regular MusicBrainz search for tracks with MBID. (BR 280857)
    * Always use English AND/OR in Collection Filter even if translations are
      in effect. (BR 279559)
    * Fix errors in the saved playlists view when removing a playlist. (BR 273358)
    * Fixed issue where the Context View wrench was not created when the
      Context View had no applets. (BR 280382)
    * Fixed off-by-one error in organize collection dialog.
    * Fixed issue that made TagGuesser dialog to forget setings. (BR 280288)
    * Fixed tags guessing from full file path. (BR 264302)
    * Work around a Qt bug that crashed Amarok in various situations. (BR 207382, BR 269227)
    * Fixed issue with TagDialog that brought to messed up digits order in numerical
      fields (year, track, disk, score). (BR 277279)
    * Made possible to store empty TagDialog's numerical fields. (BR 278921)
    * Fixed issue with TagDialog's "Open Destination" button, now It opens
      correct directory instead of parent. (BR 279147)

Version 2.4.3
  BUGFIXES: